# zircon

zircon/: .gitignore
zircon/client/ios/spike-modules/zcPhoneValidation/: Podfile
zircon/client/ios/spike-modules/zcPhoneValidation/zcPhoneValidation/: AppDelegate.h  AppDelegate.m  Info.plist  LoginViewController.h  LoginViewController.m  ViewController.h  ViewController.m  main.m
zircon/client/ios/spike-modules/zcPhoneValidation/zcPhoneValidation.xcodeproj/: project.pbxproj
zircon/client/ios/spike-modules/zcPhoneValidation/zcPhoneValidation.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
zircon/client/ios/spike-modules/zcPhoneValidation/zcPhoneValidation.xcworkspace/: contents.xcworkspacedata
zircon/client/ios/spike-modules/zcPhoneValidation/zcPhoneValidationTests/: zcPhoneValidationTests.m
zircon/server/docs/: design-notes.txt
zircon/server/spike/libev-sample/: CMakeLists.txt  sample.cpp
zircon/server/spike/unix-server/: CMakeLists.txt  build.sh  main.c  test_main.cpp  test_zc_list.cpp  test_zc_log.cpp  test_zc_server.cpp  test_zc_socket.cpp  test_zc_utils.cpp  zc_alloc.c  zc_client.c  zc_list.c  zc_log.c  zc_sample_client_app.c  zc_server.c  zc_socket.c  zc_socket_native.c  zc_utils.c
zircon/server/spike/unix-server/b/: client  server  test
zircon/server/spike/unix-server/include/: zc_alloc.h  zc_assert.h  zc_client.h  zc_global_constants.h  zc_list.h  zc_log.h  zc_server.h  zc_socket.h  zc_socket_native.h  zc_utils.h
zircon/server/spike/zircon_ps_registration/: Dockerfile  README.md  script_build.sh  script_build_docker_image.sh
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcData/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcData/exec/sample/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcData/exec/sample/src/: zcData_Sample.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcData/exec/test/lib/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcData/exec/test/lib/src/: test_zcRepo.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcData/lib/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcData/lib/include/: zcAccountRepo.h  zcData.h  zcRepo.h
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcData/lib/src/: zcAccountRepo.cpp  zcData.cpp  zcRepo.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcDomain/exec/sample/src/: zcDomain_Sample.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcDomain/exec/test/lib/src/: test_DomainSample.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcDomain/lib/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcDomain/lib/include/: zcIdentifier.h
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcDomain/lib/include/aggregate/: AccountId.hpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcDomain/lib/src/: zcIdentifier.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcDomain/lib/src/aggregate/: Aggregate_Account.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcDomain/lib/src/command/: Command_CreateAccount.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcPresent/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcPresent/exec/sample/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcPresent/exec/sample/src/: zcPresent_Sample.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcPresent/exec/test/lib/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcPresent/lib/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcPresent/lib/include/: zcAccountController.h  zcAccountService.h  zcPresent.h
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcPresent/lib/src/: zcAccountController.cpp  zcAccountService.cpp  zcPresent.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcShared/exec/test/lib/src/: test_Sample.cpp
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcShared/lib/: CMakeLists.txt
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcShared/lib/include/: zcStatus.h
zircon/server/spike/zircon_ps_registration/zcPetSitterRegistration/zcShared/lib/src/: zcStatus.cpp
